feat(mlops): add modal deployment (#548)
* add modal deployment

* able to save modal information
